; ModuleID = '/home/carl/AnghaBench/systemd/src/network/extr_networkd-brvlan.c_set_bit.c'
source_filename = "/home/carl/AnghaBench/systemd/src/network/extr_networkd-brvlan.c_set_bit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BRIDGE_VLAN_BITMAP_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @set_bit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_bit(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @BRIDGE_VLAN_BITMAP_MAX, align 4
  %7 = icmp ult i32 %5, %6
  br i1 %7, label %8, label %20

8:                                                ; preds = %2
  %9 = call i32 @UINT32_C(i32 1)
  %10 = load i32, i32* %3, align 4
  %11 = urem i32 %10, 32
  %12 = shl i32 %9, %11
  %13 = load i32*, i32** %4, align 8
  %14 = load i32, i32* %3, align 4
  %15 = udiv i32 %14, 32
  %16 = zext i32 %15 to i64
  %17 = getelementptr inbounds i32, i32* %13, i64 %16
  %18 = load i32, i32* %17, align 4
  %19 = or i32 %18, %12
  store i32 %19, i32* %17, align 4
  br label %20

20:                                               ; preds = %8, %2
  ret void
}

declare dso_local i32 @UINT32_C(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
